--- a/Sharipov_Trade/ProductPage.xaml
+++ b/Sharipov_Trade/ProductPage.xaml
@@ -15,29 +15,20 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Name="userRoleTB" FontSize="12" HorizontalAlignment="Right" Grid.Column="2"></TextBlock>
-
-        <WrapPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Horizontal">
-            <StackPanel Orientation="Horizontal" Margin="10">
-                                   
-               <TextBox Width="250" Name="SearchTB" Margin="5, 0, 5, 0"></TextBox>
-               <ComboBox Name="FiterCB" Width="250" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5, 0, 5, 0" SelectionChanged="FiterCB_SelectionChanged">
-                    <ComboBoxItem Content="Все диапазоны"></ComboBoxItem>
-                    <ComboBoxItem Content="от 0% до 10%"></ComboBoxItem>
-                    <ComboBoxItem Content="от 10% до 15%"></ComboBoxItem>
-                    <ComboBoxItem Content="от 15% и более"></ComboBoxItem>
-                </ComboBox>
-               <ComboBox Name="SortCB" Width="250" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" SelectionChanged="SortCB_SelectionChanged">
-                    <ComboBoxItem Content="Сортировка"></ComboBoxItem>
-                    <ComboBoxItem Content="По возрастанию стоимости"></ComboBoxItem>
-                    <ComboBoxItem Content="По убыванию стоимости"></ComboBoxItem>
-                </ComboBox>                
-            </StackPanel>
+        <WrapPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <TextBox Grid.Column="0"></TextBox>
+            </Grid>
         </WrapPanel>
         
         <ListView Grid.Row="2" Grid.ColumnSpan="2" Name="ProdList">
@@ -45,15 +36,15 @@
                 <DataTemplate>
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="auto"></RowDefinition>
+                            <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"></ColumnDefinition>
-                            <ColumnDefinition Width="50"></ColumnDefinition>
                             <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="50"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Image Name="ProdImage" Width="150" Height="150" Grid.Column="0" Grid.RowSpan="4" Margin="0, 0, 25, 0">
                             <Image.Source>
@@ -66,33 +57,16 @@
                                     </Binding>                             
                             </Image.Source>
                         </Image>
-                        <TextBlock Text="{Binding ProductName}" FontWeight="Bold" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Margin="0, 10, 0, 0"></TextBlock>
-                        <TextBlock Text="Скидка" FontSize="16" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" Margin="0, 10, 0, 0"></TextBlock>
-                        <TextBlock Text="{Binding ProductDiscountAmount, StringFormat={}{0}%}" FontSize="20" Grid.Column="2"  Grid.RowSpan="3" VerticalAlignment="Center" HorizontalAlignment="Right" Margin=" 0 0 0 0 "></TextBlock>
-
-                        <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" Grid.Row="1">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                                    <ColumnDefinition Width="60"></ColumnDefinition>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                </Grid.RowDefinitions>
-
-
-
-                                <TextBlock Text="{Binding ProductDescription}"   Grid.Row="0" FontSize="16" VerticalAlignment="Center"></TextBlock>
-                                <TextBlock Text="{Binding ProductManufacturer, StringFormat=Производитель: {0}}" Grid.ColumnSpan="2"  Grid.Row="1" FontSize="16" VerticalAlignment="Center"></TextBlock>
-                                <TextBlock Text="{Binding ProductCost, StringFormat=Цена: {0} руб}" FontSize="16" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2"  HorizontalAlignment="Left"></TextBlock>
-                            </Grid>
-                        </StackPanel>
+                        <TextBlock Text="{Binding ProductName}" Grid.Column="1" Grid.Row="0"></TextBlock>
+                        <TextBlock Text="{Binding ProductDescription}" Grid.Column="1" Grid.Row="1"></TextBlock>
+                        <TextBlock Text="{Binding ProductManufacturer}" Grid.Column="1" Grid.Row="2"></TextBlock>
+                        <TextBlock Text="{Binding ProductCost, StringFormat={}{0} руб}" Grid.Column="1" Grid.Row="3"></TextBlock>
+                        <TextBlock Text="{Binding ProductDiscountAmount, StringFormat={}{0}%}" FontSize="30" Grid.Column="2" Grid.RowSpan="4" VerticalAlignment="Center" HorizontalAlignment="Right"></TextBlock>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-          
+        <TextBlock Name="userRoleTB" FontSize="10" Text="qwerty" HorizontalAlignment="Right" Grid.Column="2">    
+        </TextBlock>
     </Grid>
 </Page>
